force-app/main/default/objects/MD_Type__c/MD_Type__c.object-meta.xml
<CustomObject>
    <label>MD_Type</label>
    <nameField>
        <label>MD_Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MD_Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>