force-app/main/default/objects/MD_Type__c/fields/Links_to_Customer_Requests__c.field-meta.xml
<CustomField>
    <fullName>Links_to_Customer_Requests__c</fullName>
    <label>Links to Customer Requests</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>