force-app/main/default/objects/MD_Type__c/fields/MDAPI__c.field-meta.xml
<CustomField>
    <fullName>MDAPI__c</fullName>
    <label>MDAPI</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>False</fullName>
            </value>
            <value>
                <fullName>Issues</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>