force-app/main/default/objects/MD_Type__c/fields/Source_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Source_Tracking__c</fullName>
    <label>Source Tracking</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>False</fullName>
            </value>
            <value>
                <fullName>Issues</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>