force-app/main/default/objects/MD_Type__c/fields/Work_Item_Count__c.field-meta.xml
<CustomField>
    <fullName>Work_Item_Count__c</fullName>
    <label>Work Item Count</label>
    <summaryForeignKey>WorkItem__c.MD_Type__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>