force-app/main/default/objects/MD_Type__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Work_Item_Count__c</columns>
    <columns>MDAPI__c</columns>
    <columns>Source_Tracking__c</columns>
    <columns>Unlocked_Packaging__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>